// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChatEmptyState matches snapshot for desktop 1`] = `
<div>
  <div
    class="flex items-center justify-center py-16"
  >
    <div
      class="animate-fade-in max-w-xl text-center px-12 py-12 backdrop-blur-glass backdrop-saturate-glass shadow-apple-xl duration-base ease-out-smooth hover:shadow-apple-xl rounded-2xl border border-[var(--glass-border)] bg-[var(--glass-white)] transition-all hover:-translate-y-0.5"
    >
      <div
        class="mb-8 flex flex-col items-center justify-center"
      >
        <div
          aria-label="New Moon at 0% illumination"
          class="relative mb-4"
          role="img"
          style="width: 240px; height: 240px;"
        >
          <div
            class="absolute inset-0"
            style="width: 240px; height: 240px;"
          >
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 111.21197959327358px; top: 8.685754048998376px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 149.35008863683925px; top: 169.2067103071379px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 23.709018789505492px; top: 83.76158302235177px; width: 0.9px; height: 0.9px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 161.19075942321217px; top: 63.99040459529471px; width: 1.6px; height: 1.6px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 73.93138732190022px; top: 185.09657709355423px; width: 1.3px; height: 1.3px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 64.74976877915714px; top: 25.963379339160042px; width: 1px; height: 1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 169.51522746632554px; top: 128.15374131984984px; width: 1.7000000000000002px; height: 1.7000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 12.857695300552237px; top: 132.48413045886565px; width: 1.4px; height: 1.4px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 139.12875129272334px; top: 23.417098368681522px; width: 1.1px; height: 1.1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 121.01615130058647px; top: 176.15327559935199px; width: 0.8px; height: 0.8px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 38.99386987366148px; top: 61.76059510128px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 188.5180277260141px; top: 83.73473739847404px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
          </div>
          <div
            class="relative z-10"
            style="transform: scale(1); transition: transform 0.3s ease-out; border-radius: 50%; overflow: hidden;"
          >
            <svg
              fill="none"
              height="240"
              style="shape-rendering: geometricPrecision;"
              viewBox="0 0 200 200"
              width="240"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <filter
                  height="100%"
                  id="desaturate-dark"
                  width="100%"
                  x="0"
                  y="0"
                >
                  <fecolormatrix
                    type="saturate"
                    values="0.3"
                  />
                </filter>
                <filter
                  height="100%"
                  id="desaturate-lit"
                  width="100%"
                  x="0"
                  y="0"
                >
                  <fecolormatrix
                    type="saturate"
                    values="0.85"
                  />
                </filter>
                <mask
                  id="moon-mask"
                >
                  <circle
                    cx="100"
                    cy="100"
                    fill="white"
                    r="100"
                  />
                </mask>
                <mask
                  id="lit-mask"
                >
                  <path
                    d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                    fill="white"
                  />
                </mask>
                <radialgradient
                  cx="40%"
                  cy="40%"
                  id="moon-sphere"
                  r="60%"
                >
                  <stop
                    offset="0%"
                    stop-color="#f8fafc"
                  />
                  <stop
                    offset="25%"
                    stop-color="#f1f5f9"
                  />
                  <stop
                    offset="45%"
                    stop-color="#e2e8f0"
                  />
                  <stop
                    offset="60%"
                    stop-color="#cbd5e1"
                  />
                  <stop
                    offset="75%"
                    stop-color="#94a3b8"
                  />
                  <stop
                    offset="85%"
                    stop-color="#64748b"
                  />
                  <stop
                    offset="95%"
                    stop-color="#475569"
                  />
                  <stop
                    offset="100%"
                    stop-color="#334155"
                  />
                </radialgradient>
                <lineargradient
                  id="terminator-shadow"
                  x1="100%"
                  x2="0%"
                  y1="50%"
                  y2="50%"
                >
                  <stop
                    offset="0%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="20%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="15%"
                    stop-color="rgba(0,0,0,0.3)"
                  />
                  <stop
                    offset="100%"
                    stop-color="rgba(0,0,0,0.5)"
                  />
                </lineargradient>
                <lineargradient
                  id="terminator-blend"
                  x1="0%"
                  x2="100%"
                  y1="50%"
                  y2="50%"
                >
                  <stop
                    offset="0%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="40%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="50%"
                    stop-color="rgba(10,10,10,0.6)"
                  />
                  <stop
                    offset="60%"
                    stop-color="rgba(10,10,10,0.3)"
                  />
                  <stop
                    offset="100%"
                    stop-color="transparent"
                  />
                </lineargradient>
              </defs>
              <circle
                cx="100"
                cy="100"
                fill="#0a0a0a"
                r="100"
              />
              <g
                filter="url(#desaturate-dark)"
                mask="url(#moon-mask)"
              >
                <image
                  height="300"
                  href="/moon-texture.jpg"
                  opacity="0.08"
                  preserveAspectRatio="xMidYMid slice"
                  width="200"
                  x="0"
                  y="-50"
                />
              </g>
              <g
                filter="url(#desaturate-lit)"
                mask="url(#lit-mask)"
              >
                <image
                  height="300"
                  href="/moon-texture.jpg"
                  opacity="0.9"
                  preserveAspectRatio="xMidYMid slice"
                  width="200"
                  x="0"
                  y="-50"
                />
              </g>
              <path
                d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                fill="#e2e8f0"
                opacity="0.1"
              />
              <path
                d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                fill="url(#moon-sphere)"
                opacity="0.25"
              />
              <g
                mask="url(#lit-mask)"
              >
                <circle
                  cx="100"
                  cy="100"
                  fill="url(#terminator-shadow)"
                  r="100"
                  style="pointer-events: none;"
                />
              </g>
              <circle
                cx="100"
                cy="100"
                fill="url(#terminator-blend)"
                r="100"
                style="pointer-events: none;"
              />
            </svg>
          </div>
        </div>
        <span
          class="text-muted-foreground/70 text-xs font-medium tracking-widest uppercase"
        >
          New Moon
           • 
          0
          %
           
          Illum.
        </span>
        <p
          class="animate-fade-in text-primary/70 animation-delay-300 mt-6 max-w-lg px-6 text-center text-base leading-relaxed font-light italic"
        >
          "
          moon.quote.new
          "
        </p>
      </div>
      <h2
        class="gradient-text mt-8 text-3xl tracking-tight"
      >
        Welcome to Your Therapeutic Space
      </h2>
    </div>
  </div>
</div>
`;

exports[`ChatEmptyState matches snapshot for mobile 1`] = `
<div>
  <div
    class="flex items-center justify-center py-8"
  >
    <div
      class="animate-fade-in max-w-xl text-center px-6 py-8 backdrop-blur-glass backdrop-saturate-glass shadow-apple-xl duration-base ease-out-smooth hover:shadow-apple-xl rounded-2xl border border-[var(--glass-border)] bg-[var(--glass-white)] transition-all hover:-translate-y-0.5"
    >
      <div
        class="mb-6 flex flex-col items-center justify-center"
      >
        <div
          aria-label="New Moon at 0% illumination"
          class="relative mb-4"
          role="img"
          style="width: 180px; height: 180px;"
        >
          <div
            class="absolute inset-0"
            style="width: 180px; height: 180px;"
          >
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 111.21197959327358px; top: 8.685754048998376px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 149.35008863683925px; top: 169.2067103071379px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 23.709018789505492px; top: 83.76158302235177px; width: 0.9px; height: 0.9px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 161.19075942321217px; top: 63.99040459529471px; width: 1.6px; height: 1.6px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 73.93138732190022px; top: 185.09657709355423px; width: 1.3px; height: 1.3px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 64.74976877915714px; top: 25.963379339160042px; width: 1px; height: 1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 169.51522746632554px; top: 128.15374131984984px; width: 1.7000000000000002px; height: 1.7000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 12.857695300552237px; top: 132.48413045886565px; width: 1.4px; height: 1.4px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 139.12875129272334px; top: 23.417098368681522px; width: 1.1px; height: 1.1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 121.01615130058647px; top: 176.15327559935199px; width: 0.8px; height: 0.8px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 38.99386987366148px; top: 61.76059510128px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 188.5180277260141px; top: 83.73473739847404px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
          </div>
          <div
            class="relative z-10"
            style="transform: scale(1); transition: transform 0.3s ease-out; border-radius: 50%; overflow: hidden;"
          >
            <svg
              fill="none"
              height="180"
              style="shape-rendering: geometricPrecision;"
              viewBox="0 0 200 200"
              width="180"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <filter
                  height="100%"
                  id="desaturate-dark"
                  width="100%"
                  x="0"
                  y="0"
                >
                  <fecolormatrix
                    type="saturate"
                    values="0.3"
                  />
                </filter>
                <filter
                  height="100%"
                  id="desaturate-lit"
                  width="100%"
                  x="0"
                  y="0"
                >
                  <fecolormatrix
                    type="saturate"
                    values="0.85"
                  />
                </filter>
                <mask
                  id="moon-mask"
                >
                  <circle
                    cx="100"
                    cy="100"
                    fill="white"
                    r="100"
                  />
                </mask>
                <mask
                  id="lit-mask"
                >
                  <path
                    d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                    fill="white"
                  />
                </mask>
                <radialgradient
                  cx="40%"
                  cy="40%"
                  id="moon-sphere"
                  r="60%"
                >
                  <stop
                    offset="0%"
                    stop-color="#f8fafc"
                  />
                  <stop
                    offset="25%"
                    stop-color="#f1f5f9"
                  />
                  <stop
                    offset="45%"
                    stop-color="#e2e8f0"
                  />
                  <stop
                    offset="60%"
                    stop-color="#cbd5e1"
                  />
                  <stop
                    offset="75%"
                    stop-color="#94a3b8"
                  />
                  <stop
                    offset="85%"
                    stop-color="#64748b"
                  />
                  <stop
                    offset="95%"
                    stop-color="#475569"
                  />
                  <stop
                    offset="100%"
                    stop-color="#334155"
                  />
                </radialgradient>
                <lineargradient
                  id="terminator-shadow"
                  x1="100%"
                  x2="0%"
                  y1="50%"
                  y2="50%"
                >
                  <stop
                    offset="0%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="20%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="15%"
                    stop-color="rgba(0,0,0,0.3)"
                  />
                  <stop
                    offset="100%"
                    stop-color="rgba(0,0,0,0.5)"
                  />
                </lineargradient>
                <lineargradient
                  id="terminator-blend"
                  x1="0%"
                  x2="100%"
                  y1="50%"
                  y2="50%"
                >
                  <stop
                    offset="0%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="40%"
                    stop-color="transparent"
                  />
                  <stop
                    offset="50%"
                    stop-color="rgba(10,10,10,0.6)"
                  />
                  <stop
                    offset="60%"
                    stop-color="rgba(10,10,10,0.3)"
                  />
                  <stop
                    offset="100%"
                    stop-color="transparent"
                  />
                </lineargradient>
              </defs>
              <circle
                cx="100"
                cy="100"
                fill="#0a0a0a"
                r="100"
              />
              <g
                filter="url(#desaturate-dark)"
                mask="url(#moon-mask)"
              >
                <image
                  height="300"
                  href="/moon-texture.jpg"
                  opacity="0.08"
                  preserveAspectRatio="xMidYMid slice"
                  width="200"
                  x="0"
                  y="-50"
                />
              </g>
              <g
                filter="url(#desaturate-lit)"
                mask="url(#lit-mask)"
              >
                <image
                  height="300"
                  href="/moon-texture.jpg"
                  opacity="0.9"
                  preserveAspectRatio="xMidYMid slice"
                  width="200"
                  x="0"
                  y="-50"
                />
              </g>
              <path
                d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                fill="#e2e8f0"
                opacity="0.1"
              />
              <path
                d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                fill="url(#moon-sphere)"
                opacity="0.25"
              />
              <g
                mask="url(#lit-mask)"
              >
                <circle
                  cx="100"
                  cy="100"
                  fill="url(#terminator-shadow)"
                  r="100"
                  style="pointer-events: none;"
                />
              </g>
              <circle
                cx="100"
                cy="100"
                fill="url(#terminator-blend)"
                r="100"
                style="pointer-events: none;"
              />
            </svg>
          </div>
        </div>
        <span
          class="text-muted-foreground/70 text-xs font-medium tracking-widest uppercase"
        >
          New Moon
           • 
          0
          %
           
          Illum.
        </span>
        <p
          class="animate-fade-in text-primary/70 animation-delay-300 mt-6 max-w-lg px-6 text-center text-base leading-relaxed font-light italic"
        >
          "
          moon.quote.new
          "
        </p>
      </div>
      <h2
        class="gradient-text mt-8 text-3xl tracking-tight"
      >
        Welcome to Your Therapeutic Space
      </h2>
    </div>
  </div>
</div>
`;
